fix(hero): :lipstick: change height of hero section since it was too large

--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -1,5 +1,6 @@
 .container {
-    height: 100vh;
+    top: 0;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
